--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8761
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.server.enableSelfPreservation=false
